@@ -1,3 +1,12 @@
+2009-05-14  Uros Bizjak  <ubizjak@gmail.com>
+
+	PR target/37179
+	* config/i386/driver-i386.c (vendor_signatures): New enum.
+	(processor_signatures): Ditto.
+	(host_detect_local_cpu): Use vendor_signatures and
+	processor_signatures enums.  For SIG_AMD vendor, check for
+	SIG_GEODE processor signature to detect geode processor.
+
 2009-05-12  Tobias Burnus  <burnus@net-b.de>
 
 	PR bootstrap/40061
